[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
regex = "1.11.1"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
socket2 = { version = "0.5.9", features = ["all"] }